adeguato subtitle del template all'index

--- a/tilde-website/post-template.html
+++ b/tilde-website/post-template.html
@@ -11,7 +11,7 @@
     <div class="container">
         <header>
             <h1>~resco</h1>
-            <p class="subtitle">digital garden & thoughts</p>
+            <p class="subtitle">made with the help of some AI &amp; deployed with human love</p>
         </header>
         
 
