nuovo post di prova aggiunto

--- a/tilde-website/index.html
+++ b/tilde-website/index.html
@@ -59,46 +59,58 @@
       blog
      </h2>
      <div class="blog-list">
+<div class="blog-entry"> <span class="date"> 2025-08-30 </span> <span class="separator"> ~ </span> <a href="posts/20250830.html"> Alcuni test di traduzione </a> </div>
 <div class="blog-entry"> <span class="date"> 2025-08-29 </span> <span class="separator"> ~ </span> <a href="posts/20250829.html"> Finalmente iscritto </a> </div>
 <div class="blog-entry"> <span class="date"> 2025-08-01 </span> <span class="separator"> ~ </span> <a href="posts/new-test-post.html"> Benvenuto </a> </div>
      </div>
     </section>
    </main>
    <footer>
-       <p>
-        © 2025 ~resco. Built with ❤️ for the tilde.club community.
-       </p>
-       <!-- Begin Tilde.Club Ring Fragment-->
+    <p>
+     © 2025 ~resco. Built with ❤️ for the tilde.club community.
+    </p>
+    <!-- Begin Tilde.Club Ring Fragment-->
+    <center>
+     <font size="2">
+     </font>
+     <center>
+      <font size="2">
        <center>
-            <font size="2">
-            </font></p>
-            <center>
-                 <font size="2">
-                      <center>
-                           <br><img src="http://tilde.club/~harper/webring.png"  border="0" usemap="#notepad.map"><br>
-                      </center>
-                      <br>
-                      Click for the [
-                      <a href="http://tilde.club/~harper/link.html?action=random" target="_top">Random page</a> ]
-                      <br>
-                      Want to join the ring? I ALREADY DID. Click here for
-                      <a href="http://tilde.club/~harper/link.html?action=info" target="_top">info</a>.
-                      <br>
-                 </font>
-            </center>
-            <map name="notepad.map">
-                 <area shape="rect" coords="0, 0, 60, 70" target="_top" href="http://tilde.club/~harper/link.html?action=join">
-                 <area shape="rect" coords="130, 0, 417, 75" target="_top" href="http://tilde.club/~harper/link.html?action=random">
-                 <area shape="rect" coords="465, 0, 549, 75" target="_top" href="http://tilde.club/~harper/link.html?action=join">
-            </map>
+        <br/>
+        <img border="0" src="http://tilde.club/~harper/webring.png" usemap="#notepad.map"/>
+        <br/>
        </center>
-       <!-- End Webring Fragment-->
-
-       <!-- Begin Tilde Club Badge -->
-       <center>
-            <p><a href="http://tilde.club"><img src="http://tilde.club/~zarate/tildeclub.gif" border="0" width="88" height="31" alt="Tilde Club Badge"></a></p>
-       </center>
-       <!-- End Tilde Club Badge -->
+       <br/>
+       Click for the [
+       <a href="http://tilde.club/~harper/link.html?action=random" target="_top">
+        Random page
+       </a>
+       ]
+       <br/>
+       Want to join the ring? I ALREADY DID. Click here for
+       <a href="http://tilde.club/~harper/link.html?action=info" target="_top">
+        info
+       </a>
+       .
+       <br/>
+      </font>
+     </center>
+     <map name="notepad.map">
+      <area coords="0, 0, 60, 70" href="http://tilde.club/~harper/link.html?action=join" shape="rect" target="_top"/>
+      <area coords="130, 0, 417, 75" href="http://tilde.club/~harper/link.html?action=random" shape="rect" target="_top"/>
+      <area coords="465, 0, 549, 75" href="http://tilde.club/~harper/link.html?action=join" shape="rect" target="_top"/>
+     </map>
+    </center>
+    <!-- End Webring Fragment-->
+    <!-- Begin Tilde Club Badge -->
+    <center>
+     <p>
+      <a href="http://tilde.club">
+       <img alt="Tilde Club Badge" border="0" height="31" src="http://tilde.club/~zarate/tildeclub.gif" width="88"/>
+      </a>
+     </p>
+    </center>
+    <!-- End Tilde Club Badge -->
    </footer>
   </div>
  </body>
