--- a/tilde-website/index.html
+++ b/tilde-website/index.html
@@ -70,48 +70,19 @@
     <p>
      © 2025 ~resco. Built with ❤️ for the tilde.club community.
     </p>
-    <!-- Begin Tilde.Club Ring Fragment-->
-    <center>
-     <font size="2">
-     </font>
-     <center>
-      <font size="2">
-       <center>
-        <br/>
-        <img border="0" src="http://tilde.club/~harper/webring.png" usemap="#notepad.map"/>
-        <br/>
-       </center>
-       <br/>
-       Click for the [
-       <a href="http://tilde.club/~harper/link.html?action=random" target="_top">
-        Random page
-       </a>
-       ]
-       <br/>
-       Want to join the ring? I ALREADY DID. Click here for
-       <a href="http://tilde.club/~harper/link.html?action=info" target="_top">
-        info
-       </a>
-       .
-       <br/>
-      </font>
-     </center>
-     <map name="notepad.map">
-      <area coords="0, 0, 60, 70" href="http://tilde.club/~harper/link.html?action=join" shape="rect" target="_top"/>
-      <area coords="130, 0, 417, 75" href="http://tilde.club/~harper/link.html?action=random" shape="rect" target="_top"/>
-      <area coords="465, 0, 549, 75" href="http://tilde.club/~harper/link.html?action=join" shape="rect" target="_top"/>
-     </map>
-    </center>
-    <!-- End Webring Fragment-->
-    <!-- Begin Tilde Club Badge -->
-    <center>
-     <p>
-      <a href="http://tilde.club">
-       <img alt="Tilde Club Badge" border="0" height="31" src="http://tilde.club/~zarate/tildeclub.gif" width="88"/>
-      </a>
-     </p>
-    </center>
-    <!-- End Tilde Club Badge -->
+          <!-- Begin Webring Links and Tilde Club Badge -->
+          <div class="footer-links">
+               <div class="webring-links">
+                    <a href="http://tilde.club/~harper/link.html?action=join" target="_top">Join the ring</a> |
+                    <a href="http://tilde.club/~harper/link.html?action=random" target="_top">Random page</a>
+               </div>
+               <div class="tilde-badge">
+                    <a href="http://tilde.club">
+                         <img alt="Tilde Club Badge" border="0" height="31" src="http://tilde.club/~zarate/tildeclub.gif" width="88"/>
+                    </a>
+               </div>
+          </div>
+          <!-- End Webring Links and Tilde Club Badge -->
    </footer>
   </div>
  </body>
